# verkle-tree-circuit

./: .dockerignore  .gitignore  .gitmodules  Cargo.docker.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sh
.githooks/: post-merge
src/: command.rs  crs.rs  lib.rs  main.rs
src/api/: input.rs  mod.rs  prove.rs  run.rs  setup.rs  utils.rs  verify.rs
src/api/batch_proof/: input.rs  mod.rs  setup.rs
src/api/batch_proof_fr/: input.rs
src/api/batch_proof_fs/: input.rs
src/api/discrete_log/: groth16.rs  input.rs  mod.rs  run.rs
src/api/ipa/: input.rs  run.rs  setup.rs
src/api/ipa2/: setup.rs
src/api/ipa_fr/: input.rs  setup.rs
src/api/ipa_fs/: input.rs  mod.rs
src/api/poseidon/: input.rs  mod.rs  run.rs
src/api/poseidon_fs/: input.rs
src/api/sample/: input.rs  mod.rs  prove.rs  run.rs  setup.rs  verify.rs
src/api/verkle_tree/: input.rs
src/api/verkle_tree_fs/: input.rs
src/circuit/: config.rs  ipa.rs  mod.rs  proof.rs  transcript.rs  utils.rs
src/circuit/batch_proof/: mod.rs
src/circuit/batch_proof_fr/: mod.rs
src/circuit/batch_proof_fs/: mod.rs
src/circuit/discrete_log/: mod.rs  utils.rs
src/circuit/ipa/: config.rs  dummy_transcript.rs  mod.rs  proof.rs  transcript.rs  utils.rs
src/circuit/ipa2/: config.rs  mod.rs  proof.rs  transcript.rs  utils.rs
src/circuit/ipa_fr/: circuit.rs  config.rs  mod.rs  proof.rs  transcript.rs  utils.rs
src/circuit/ipa_fs/: circuit.rs  config.rs  dummy_transcript.rs  mod.rs  proof.rs  transcript.rs  utils.rs
src/circuit/num/: baby_ecc.rs  field_element.rs  lookup.rs  mod.rs
src/circuit/poseidon/: mod.rs
src/circuit/poseidon_fs/: mod.rs
src/circuit/sample/: mod.rs
src/circuit/scalar/: mod.rs
tests/: input.json
(+3 files in other folders)
