[package]
name = "verkle-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
hex = "0.4"
rand = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch = "zinc", version = "0.0.5" }
