[package]
name = "verkle-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bit-vec = "0.6.3"
blake2s_simd = "1.0.0"
bytes = "1.1"
byteorder = "1.4"
generic-array = "0.14.5"
hex = "0.4"
num-bigint = "0.3"
rand = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
franklin-crypto = {git = "https://github.com/matter-labs/franklin-crypto", branch = "beta", features = ["multicore", "plonk"]}
verkle-tree = { path = "./packages/verkle-tree" }
